--- a/noveno-sabado/peliculas/src/App.css
+++ b/noveno-sabado/peliculas/src/App.css
@@ -18,6 +18,10 @@
   font-size: large;
 }
 
+.rojo{
+  background-color: #FF5651 !important;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
